style.css
*{
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif 
}
body {
    display: flex;
    flex-flow: column wrap;
    margin: 0px;
}
body .top-con, .awesome-website, #thunder, .sub-con, .footer{
    display: flex;
}
button {
    color: white;
    background-color: #3882F6;
    border: none;
    outline:  none;
    height: 30px;
    width: 100px;
    border-radius: 3px;
}
.awesome-website button, .sub-con button {
    max-width: 70px;
}
.hero{
    align-content: space-around;
    background-color: #1f2937;
    height: 500px;
    width:  900px;
    flex: 1;
}
.Temp-logo{
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 700;
}
.head, ul, .Temp-logo {
    display: flex;
    justify-content: space-between;
    gap: 10px;
    color: white;
}
.head li, .head a {
    text-decoration: none;
    list-style-type: none;
    color: rgba(255, 255, 255, 0.594);
}
.head, .top-con {
    background-color: #1f2937;
    color:white;
}
.top-con{
    justify-content: center;
    align-items: center;
}
.awesome-website{
    flex-flow: column wrap;
    flex: 0 1 50%;
}
#awesome {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;

}
#place-holder{
    background-color: #c0c1c3ba;
    flex: 1 0 auto;
    align-self: stretch;
}
.top-con div{
    font-size: 18px;
    color: #E5E7EB;
}
.Img-holder, .Inspirational_quote {
    background-color: rgba(255, 255, 255, 0.594);
}
.mid-con{
    display: flex;
    flex-flow:  column wrap;
    align-items: center;
}
.a-random-information{
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
    
}
.a_lot_of_tuff{
   flex-flow: row wrap;
    align-items: center;
    flex: 1 1 auto;
}
.woobli-ilustration{
  flex-flow: row;
  align-items: center;
}   
#woobli {
    border: solid 3px #3882F6;
    border-radius: 5px;
}
.bottom-con {
    display: flex;
    flex-flow: column wrap;
}
.inspirational-quote, .quote, #thunder{
     background-color: #E5E7EB;
}
.quote{
    font-size: 36px;
    font-weight: 300;
    color: #1f2937;
}
#thunder {
    justify-content: flex-end;
    font-size: 18px;
    font-weight: 700;
}
.sub-con {
   flex-flow: row wrap; 
   justify-content: center;
   background-color: #3882F6;
   border-radius: 4px;
   width: 600px;
   gap: 20px;
   align-self: center;
   color: #F9FAF8;
   padding: 10px;
   margin: 20px;

}
.sub-con button {
    border: #F9FAF8 2px solid;
    border-radius: 3px;
    align-self: center;
}
.sub-con div{
    font-size: 18px;
}
#time{
    font-weight: 900;
}
.footer {
    align-self: center;
    justify-content: center;
    background-color: #1f2937;
    color: white;
    flex: 1;
}

